# tiny-company

./: .env.example  .gitignore  LICENSE  README.md  config.py  package-lock.json  pyproject.toml  run.py  test_enterprise.db  test_no_tests.db  test_orchestrator.db  test_shadow.db  tracewhisper.db  work_plan.json
app/: agents.py
design/: component-spec.md  page-layouts.md  surgical-correction-visual-specs.md  surgical-correction-wireframes.md  trace-visualizer-impl-guide.md  v2-1-ui-refinements.md  v2-2-final-assets.md  v2-2-handoff.md  v2-2-ide-concepts.md  v2-2-trace-visualizer-handoff.md  v2-2-ui-spec.md  v2.2-final-handoff.md  v2.3-assets.md  v2.3-handoff.md  v2.4-enterprise-wireframes.md  v2.5-final-mocks.md  v2.5-ux-concepts.md  v3-healing-workflow-spec.md  v3-ui-ux-spec.md  wireframes.md
docs/: ai-prompt-specs.md  architecture-supabase-migration.md  beta-feedback-plan.md  brand-guide.md  budget.md  competitive-analysis.md  cost-analysis.md  current-state-report.md  design-system-impl.md  feedback-loop.md  financial-projections.md  financial-review-template.md  home-page-refinement.md  launch-checklist.md  launch-content.md  launch-metrics.md  log-format-spec.md  marketing-plan.md  marketing-roadmap.md  migration-guide.md  placement-test-spec.md  product-spec-v2.md  product-spec.md  product-spec.md`  progress.md  pronunciation-trainer-spec.md  prototype-meta-prompt-report.md  revenue-growth-model.md  revenue-model.md  roadmap.md  supabase-schema.sql  tech-stack.md  technical-architecture.md  test-write.md  theme-pack-content.md  topik-content-guide.md  (+116 more)
(+336 files in other folders)
