[project]
name = "tiny-company"
version = "0.1.0"
description = "Autonomous AI agents cooperating to build a startup company"
dependencies = [
    "google-adk>=1.15.0,<2.0.0",
    "litellm>=1.50.0",
    "ddgs>=8.0.0",
    "trafilatura>=2.0.0",
    "httpx>=0.27.0",
    "psycopg2-binary>=2.9.0",
]
requires-python = ">=3.11,<3.14"

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9.0.0",
    "pytest-asyncio>=0.23.8,<1.0.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "C", "B", "UP", "RUF"]
ignore = ["E501", "C901", "B006"]

[tool.ruff.lint.isort]
known-first-party = ["app", "config"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"

[tool.hatch.build.targets.wheel]
packages = ["app"]
